--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.0.3"
 django-environ = "^0.11.2"
 ruff = "^0.3.2"
 pre-commit = "^3.6.2"
+psycopg = {extras = ["binary"], version = "^3.1.18"}
 
 
 [build-system]
