--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ django-environ = "^0.11.2"
 ruff = "^0.3.2"
 pre-commit = "^3.6.2"
 psycopg = {extras = ["binary"], version = "^3.1.18"}
+beautifulsoup4 = "^4.12.3"
+httpx = "^0.27.0"
 
 
 [build-system]
