--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pre-commit = "^3.6.2"
 psycopg = {extras = ["binary"], version = "^3.1.18"}
 beautifulsoup4 = "^4.12.3"
 httpx = "^0.27.0"
+django-bootstrap5 = "^23.4"
 
 
 [build-system]
