--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ psycopg = {extras = ["binary"], version = "^3.1.18"}
 beautifulsoup4 = "^4.12.3"
 httpx = "^0.27.0"
 django-bootstrap5 = "^23.4"
+ipython = "^8.22.2"
 
 
 [build-system]
